# starter-template-backend

./: .env.example  .gitignore  README.md  alembic.ini  nginx.conf  pyproject.toml  start.sh
alembic/: env.py
alembic/versions/: 20250829_224504_a0f3e9fb3bc7_initial_migration_for_beekeeper_schema.py
app/: error_handlers.py  exceptions.py  main.py
app/core/: base.py  config.py  database.py  exceptions.py  security.py
app/dependencies/: auth.py
app/middleware/: csrf.py  security.py
app/models/: __init__.py  base.py  initialize.py  token.py  user.py
app/routes/: __init__.py  auth.py  users.py
app/schemas/: auth.py  token.py  user.py
app/services/: apple_auth.py  auth.py  firebase_auth.py  google_auth.py  oauth.py  user.py
app/templates/: email_verified.html
app/utils/: __init__.py  email.py  exceptions.py  logging.py  monitoring.py  pagination.py
